--- a/style.css
+++ b/style.css
@@ -5,15 +5,25 @@
 }
 
 #grid{
+    background: url('thumbprint.jpeg') no-repeat;
+    background-position: center;
     border-style: solid;
     border-color: black;
     position: absolute;
 }
 
-#title{
-    padding-bottom: 0;
-}
-
 #options{
     text-align: center;
+}
+
+#instructions{
+    text-align: center;
+}
+
+#thumb{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
