there is now a P5 harmonizer, avail if 1D/P5 is selected

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body{
     touch-action: none;
 }
 
-#wave-options, #combo-options{
+#wave-options, #combo-options, #harmony-options{
     text-align: center;
 }
 
