tremolo setting available in 1D

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body{
     touch-action: none;
 }
 
-#wave-options, #combo-options, #harmony-options{
+#wave-options, #combo-options, #harmony-options, #trem-option{
     text-align: center;
 }
 
