--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html, body{
     height: 100%;
     margin: 0;
+    color: greenyellow;
+    background-color: black;
 }
 
 canvas{
@@ -17,12 +19,12 @@ canvas{
 } */
 
 #grid{
-    background: url('thumbprint.jpeg') no-repeat;
+    background: url('scan_grid.jpeg') no-repeat;
     background-position: center;
     border-style: solid;
-    border-color: black;
-    width: 100%;
-    height: 100%;
+    border-color: greenyellow;
+    width: 99%;
+    height: 99%;
     touch-action: none;
 }
 
